--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -7,7 +7,7 @@ p {
   line-height: 1.5;
   margin: 30px 0;
 }
-p a {
+p a, article li a {
   text-decoration: underline;
 }
 h1,
@@ -137,7 +137,10 @@ hr.small {
   -o-background-size: cover;
   margin-bottom: 50px;
 }
-.intro-header .container{
+#gradient{
+  padding:0;
+  margin:0;
+  width:100%;
   background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
