Include AddThis in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,3 +57,7 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
+
+<!-- AddThis JS -->
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54d72220408b5a2c" async="async"></script>
