--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,10 @@ layout: default
 
 				{{ content }}
 
+
+                {% if page.previous.url || page.next.url %}
                 <hr>
+                {% endif %}
 
                 <ul class="pager">
                     {% if page.previous.url %}
@@ -43,6 +46,22 @@ layout: default
                     </li>
                     {% endif %}
                 </ul>
+
+                <hr>
+
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                    /* * * CONFIGURATION VARIABLES * * */
+                    var disqus_shortname = 'rachelberry';
+
+                    /* * * DON'T EDIT BELOW THIS LINE * * */
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
             </div>
         </div>
