--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
         });
       });
       </script>
+      <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5816b8d06862b548"></script> 
     </main>
   </body>
 </html>
